--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -1,20 +1,15 @@
 .component-info-screen {
     width: 80vw;
-    
-}
-
-.blue-theme-popup {
-    .ui-widget-header.ui-dialog-titlebar {
+    .p-dialog-header {
         background-color: #0066b3;
         border: 1px solid #0066b3;
         color: #fff;
 
-        .ui-dialog-title {
+        .p-dialog-title {
             font-size: 1.2em;
             font-weight: normal;
         }
-
-        .ui-dialog-titlebar-icon {
+        .p-dialog-header-icons {
             color: #fff;
 
             &:hover {
@@ -22,7 +17,8 @@
             }
         }
     }
-    .ui-dialog-content.ui-widget-content {
+    .p-dialog-content {
         padding: 1.5em 1em 1.5em 1em
     }
+    
 }
