--- a/t-ui/src/app/chart-container/chart-container.component.html
+++ b/t-ui/src/app/chart-container/chart-container.component.html
@@ -1,3 +1,3 @@
 <div id="lineChart" style="width: 100%;height:100%;"></div>
-<app-component-info [(isShow)]="displayInfo"> </app-component-info>
+<app-component-info [(isShow)]="displayInfo" [componentName]="componentName"> </app-component-info>
 
