--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -4,6 +4,7 @@
         background-color: #0066b3;
         border: 1px solid #0066b3;
         color: #fff;
+        height: 30px;
 
         .p-dialog-title {
             font-size: 1.2em;
@@ -18,7 +19,8 @@
         }
     }
     .p-dialog-content {
-        padding: 1.5em 1em 1.5em 1em
+        padding: 1.5em 1em 1.5em 1em;
+        background-color: white;
     }
     
 }
