--- a/t-ui/src/app/component-info/component-info.component.html
+++ b/t-ui/src/app/component-info/component-info.component.html
@@ -1,4 +1,4 @@
 <p-dialog header="Info" styleClass="component-info-screen" [(visible)]="isShow" [modal]="true" 
     (onHide)="closeScreen()" [maximizable]="true"> 
-    Content
+    {{ details }}
 </p-dialog>
