--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -4,11 +4,12 @@
         background-color: #0066b3;
         border: 1px solid #0066b3;
         color: #fff;
-        height: 30px;
+        height: 35px;
 
         .p-dialog-title {
             font-size: 1.2em;
             font-weight: normal;
+            margin-left: 5px;
         }
         .p-dialog-header-icons {
             color: #fff;
@@ -21,6 +22,61 @@
     .p-dialog-content {
         padding: 1.5em 1em 1.5em 1em;
         background-color: white;
+    }
+
+    .p-card-body {
+        background-color: #e8e8e8;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+
+    .info-section {
+        font-size: 12px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .info-cell {
+            display: flex;
+            align-items: center;
+            height:30px;
+            line-height: 30px;
+            width: 300px;
+            .info-label {
+                min-width: 100px;
+            }
+            .info-value {
+                width: 170px;
+            }
+        }
+    }
+
+    .link-info {
+        .link-cell {
+            display: flex;
+            font-size: 12px;
+            line-height: 30px;
+            .link-label {
+                min-width: 110px;
+            }
+            .link-value {
+                color: blue;
+                cursor: pointer;
+                text-decoration: underline;
+            }
+        }
+    }
+
+    .email-info {
+        display: flex;
+        justify-content: space-between;
+        .email-cell {
+            display: flex;
+            font-size: 12px;
+            line-height: 30px;
+            .email-label {
+                min-width: 110px;
+            }
+        }
     }
     
 }
