--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -17,6 +17,10 @@
             &:hover {
                 color: #e8e8e8;
             }
+
+            .p-dialog-header-icon {
+                margin-right: 6px;
+            }
         }
     }
     .p-dialog-content {
