--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -5,6 +5,8 @@
         border: 1px solid #0066b3;
         color: #fff;
         height: 35px;
+        padding-left: 1em;
+        padding-right: 1em;
 
         .p-dialog-title {
             font-size: 1.2em;
@@ -19,10 +21,11 @@
             }
 
             .p-dialog-header-icon {
-                margin-right: 6px;
+                color: white;
             }
         }
     }
+
     .p-dialog-content {
         padding: 1.5em 1em 1.5em 1em;
         background-color: white;
@@ -81,6 +84,10 @@
                 min-width: 110px;
             }
         }
+    }
+
+    .p-button {
+        padding: 0.3rem .5rem;
     }
     
 }
