--- a/t-ui/src/app/component-info/component-info.component.html
+++ b/t-ui/src/app/component-info/component-info.component.html
@@ -1,16 +1,16 @@
 <p-dialog [header]="componentName" styleClass="component-info-screen" [(visible)]="isShow" [modal]="true" 
     (onHide)="closeScreen()" [maximizable]="true"> 
     <div>
-        <p-card header="Info">
+        <p-panel header="Info">
             <div class="info-section"> 
                 <div class="info-cell" *ngFor="let detail of textDetails"> 
                     <span class="info-label">{{detail.label}}</span>
-                    <div class="info-value">{{detail.value}}</div>
+                    <span class="info-value">{{detail.value}}</span>
                </div>
             </div>
-        </p-card>
+        </p-panel>
 
-        <p-card header="Link">
+        <p-panel header="Link">
             <div class="link-info" *ngFor="let detail of linkDetails">
                 <div class="link-cell">
                     <span class="link-label">{{detail.label}}</span>
@@ -20,19 +20,19 @@
                 </div>
 
             </div>
-        </p-card>
+        </p-panel>
 
-       <p-card header="Contact Email">
+       <p-panel header="Contact Email" styleClass="email-panel">
            <div class="email-info"> 
             <div class="email-cell" *ngFor="let detail of emailDetails"> 
                 <span class="email-label">{{detail.label}}</span>
-                <div class="email-value">{{detail.value}}</div>
+                <span class="email-value">{{detail.value}}</span>
             </div>
             <div class="operation-button">  
                 <button type="button" pButton class="ui-button-secondary" icon="pi pi-check" label="Send Email"> </button>
             </div>
            </div>
         
-       </p-card>
+       </p-panel>
     </div>
 </p-dialog>
