--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -1,8 +1,8 @@
 .component-info-screen {
     width: 50vw;
     .p-dialog-header {
-        background-color: #0066b3;
-        border: 1px solid #0066b3;
+        background-color: #1f2a3a;
+        border: 1px solid #1f2a3a;
         color: #fff;
         height: 35px;
         padding-left: 1em;
@@ -28,10 +28,22 @@
 
     .p-dialog-content {
         padding: 1em;
-        background-color: white;
+        background-color: #2a394f;
         .link-info {
             margin-bottom: 1em;
         }
+    }
+
+    .p-panel .p-panel-header{
+      background-color: #2a394f;
+      color: #eee;
+    }
+
+    .p-toggleable-content{
+      .p-panel-content{
+        background-color: #2a394f;
+        color: #eee;
+      }
     }
 
     .p-card-body {
@@ -72,7 +84,7 @@
                 margin-right: .2em;
             }
             .link-value {
-                color: blue;
+                color: #eee;
                 cursor: pointer;
                 text-decoration: underline;
             }
