--- a/t-ui/src/app/component-info/component-info.component.html
+++ b/t-ui/src/app/component-info/component-info.component.html
@@ -34,5 +34,38 @@
            </div>
         
        </p-panel>
+
+       <p-panel styleClass="commit-panel" header="Latest Commit Message">
+           <div class="commit-section">
+               <div class="commit-cell">
+                   <span class="commit-message">Fix bug</span>
+                   <div class="commit-info">
+                        <span class="commit-id">ff2efb</span>
+                       <span>sunrun93 committed 30 minutes ago</span>
+                   </div>
+               </div>
+               <div class="commit-cell">
+                <span class="commit-message">add contact dialog</span>
+                <div class="commit-info">
+                     <span class="commit-id">gg2985</span>
+                    <span>suresh committed 35 minutes ago</span>
+                </div>
+            </div>
+            <div class="commit-cell">
+                <span class="commit-message">style refact</span>
+                <div class="commit-info">
+                     <span class="commit-id">0408601</span>
+                    <span>mike committed 36 minutes ago</span>
+                </div>
+            </div>
+            <div class="commit-cell">
+                <span class="commit-message">add calendar</span>
+                <div class="commit-info">
+                     <span class="commit-id">3bc0aa2</span>
+                    <span>sam committed 40 minutes ago</span>
+                </div>
+            </div>
+           </div> 
+       </p-panel>
     </div>
 </p-dialog>
