--- a/t-ui/src/app/component-info/component-info.component.less
+++ b/t-ui/src/app/component-info/component-info.component.less
@@ -117,7 +117,7 @@
             font-size: 12px;
             .commit-info {
                 .commit-id {
-                    color: blue;
+                    color: #2196f3;
                     margin-right: 5px;
                 }
             }
